--- a/index.html
+++ b/index.html
@@ -7,8 +7,114 @@
     <title>Barber shop</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <nav>
+            <a href="/">
+                <img src="./images/Logo.svg" alt="Лого сайта">
+            </a>
+            <ul>
+                <li>
+                    <a href="">О нас</a>
+                </li>
+                <li>
+                    <a href="">Услуги и цены</a>
+                </li>
+                <li>
+                    <a href="">Мастера</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="tel:+380441111111">+38 044 111 11 11</a>
+        <button type="button">онлайн-запись</button>
+    </header>
+    <main>
+        <!-- section hero -->
+        <section>
+            <ul>
+                <li>
+                    <a href="" target="_blank" rel="noopener noreferrer">Youtube</a>
+                </li>
+                <li>
+                    <a href="" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </li>
+            </ul>
+            <p lang="en">A hair salon for men in Kyiv</p>
+            <h1 lang="en">BarberShop</h1>
+            <p>Мы эксперты в модных мужских стрижках.<br>Работаем быстро, осторожно и со вкусом.</p>
+        </section>
+        <!-- section about us -->
+        <section>
+            <ul>
+                <li>
+                    <img 
+                    src="./images/img 1.jpg" 
+                    alt="Бреет шею" 
+                    width="270" 
+                    height="445">
+                </li>
+                <li>
+                    <img 
+                    src="./images/img 2.jpg" 
+                    alt="Делает кантик" 
+                    width="270" 
+                    height="445">
+                </li>
+            </ul>
+            <p>О НАС</p>
+            <h2>Лучший Барбершоп твоего города</h2>
+            <p>
+            Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+            </p>
+            <p>
+            Мы команда, которая никогда не останавливается на достигнутом
+            и жаждет перемен. И когда ты попадешь в руки нашего мастера,
+            то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
+            готовы усовершенствовать каждого, кто к нам приходит!
+            </p>
+            <button type="button">онлайн-запись</button>            
+        </section>
+        <!-- section price -->
+        <section>
+            <p>Проведи время в компании лучших мастеров</p>
+            <h2>Услуги и цены</h2>
+            <ul>
+                <li>Мужская стрижка</li>
+                <li>Стрижка бороды</li>
+                <li>Стрижка усов</li>
+                <li>Бритье опасной бритвой</li>
+            </ul>
+            <ul>
+                <li>от 300 грн.</li>
+                <li>от 200 грн.</li>
+                <li>от 200 грн.</li>
+                <li>от 200 грн.</li>
+            </ul>
+            <ul>
+                <li>Cтрижка у стажера</li>
+                <li>Стрижка под насадку</li>
+                <li>Детская стрижка (до 12 лет)</li>
+                <li>Камуфлирование седины</li>
+            </ul>
+            <ul>
+                <li>от 50 грн.</li>
+                <li>от 200 грн.</li>
+                <li>от 300 грн.</li>
+                <li>от 200 грн.</li>
+            </ul>
+            <button type="button">онлайн-запись</button>
+        </section>
+        <!-- section why come to us -->
+        <section>
+            <p>старая традиционная школа</p>
+            <h2>Почему приходят именно к нам?</h2>
+            <p>
+                О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.
+            </p>
+        </section>
+    </main>                                                               
     <footer></footer>
 </body>
 </html>
