add all sections

--- a/index.html
+++ b/index.html
@@ -114,6 +114,125 @@
                 О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.
             </p>
         </section>
+        <!-- section our masters -->
+        <section>
+            <p>для настоящих ценителей атмосферы</p>
+            <h2>Наши мастера</h2>
+            <ul>
+                <li>
+                    <img 
+                    src="./images/master1.jpg" 
+                    alt="Барбер стрижет" 
+                    width="370" 
+                    height="346">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="./images/instagram-icon.svg" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/twitter-icon.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/facebook-icon.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img 
+                    src="./images/master2.jpg" 
+                    alt="Барбер стрижет" 
+                    width="370" 
+                    height="346">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="./images/instagram-icon.svg" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/twitter-icon.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/facebook-icon.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img 
+                    src="./images/master3.jpg" 
+                    alt="Барбер стрижет" 
+                    width="370" 
+                    height="346">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="./images/instagram-icon.svg" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/twitter-icon.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/facebook-icon.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <!-- section what is barber -->
+        <section>
+            <h2>Процес стрижки барбера</h2>
+            <p>На латинском языке “барба” означает “борода”</p>
+            <ul>
+                <li>
+                    <img src="./images/process1.jpg" alt="Стрижка" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./images/process2.jpg" alt="Бритье" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./images/process3.jpg" alt="Компрес" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./images/process4.jpg" alt="Бритье шеи" width="270" height="360">
+                </li>
+            </ul>
+        </section>
     </main>                                                               
     <footer></footer>
 </body>
