--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             </a>
             <ul>
                 <li>
-                    <a href="">О нас</a>
+                    <a href="#about">О нас</a>
                 </li>
                 <li>
-                    <a href="">Услуги и цены</a>
+                    <a href="#prices">Услуги и цены</a>
                 </li>
                 <li>
-                    <a href="">Мастера</a>
+                    <a href=#masters">Мастера</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="#contacts">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
             <p>Мы эксперты в модных мужских стрижках.<br>Работаем быстро, осторожно и со вкусом.</p>
         </section>
         <!-- section about us -->
-        <section>
+        <section id="about">
             <ul>
                 <li>
                     <img 
@@ -77,45 +77,75 @@
             <button type="button">онлайн-запись</button>            
         </section>
         <!-- section price -->
-        <section>
+        <section id="prices">
             <p>Проведи время в компании лучших мастеров</p>
             <h2>Услуги и цены</h2>
             <ul>
-                <li>Мужская стрижка</li>
-                <li>Стрижка бороды</li>
-                <li>Стрижка усов</li>
-                <li>Бритье опасной бритвой</li>
+                <li>
+                    <p>Мужская стрижка</p>
+                    <p>от 300 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка бороды</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка усов</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Бритье опасной бритвой</p>
+                    <p>от 200 грн.</p>
+                </li>
             </ul>
             <ul>
-                <li>от 300 грн.</li>
-                <li>от 200 грн.</li>
-                <li>от 200 грн.</li>
-                <li>от 200 грн.</li>
-            </ul>
-            <ul>
-                <li>Cтрижка у стажера</li>
-                <li>Стрижка под насадку</li>
-                <li>Детская стрижка (до 12 лет)</li>
-                <li>Камуфлирование седины</li>
-            </ul>
-            <ul>
-                <li>от 50 грн.</li>
-                <li>от 200 грн.</li>
-                <li>от 300 грн.</li>
-                <li>от 200 грн.</li>
+                <li>
+                    <p>Cтрижка у стажера</p>
+                    <p>от 50 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка под насадку</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Детская стрижка (до 12 лет)</p>
+                    <p>от 300 грн.</p>
+                </li>
+                <li>
+                    <p>Камуфлирование седины</p>
+                    <p>от 200 грн.</p>
+                </li>
             </ul>
             <button type="button">онлайн-запись</button>
         </section>
         <!-- section why come to us -->
         <section>
-            <p>старая традиционная школа</p>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Довольных клиентов в день</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Наград за отличный сервис</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Лучших мастеров Киева</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Подарков постоянным клиентам</p>
+                </li>
+            </ul>
+            <p>Старая традиционная школа</p>
             <h2>Почему приходят именно к нам?</h2>
             <p>
                 О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.
             </p>
         </section>
         <!-- section our masters -->
-        <section>
+        <section id="masters">
             <p>для настоящих ценителей атмосферы</p>
             <h2>Наши мастера</h2>
             <ul>
@@ -125,8 +155,8 @@
                     alt="Барбер стрижет" 
                     width="370" 
                     height="346">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
+                    <h3 lang="en">John Smith</h3>
+                    <p lang="en">Extreme Barber</p>
                     <ul>
                         <li>
                             <a href="">
@@ -156,8 +186,8 @@
                     alt="Барбер стрижет" 
                     width="370" 
                     height="346">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
+                    <h3 lang="en">Michele Doe</h3>
+                    <p lang="en">Extreme Barber</p>
                     <ul>
                         <li>
                             <a href="">
@@ -187,8 +217,8 @@
                     alt="Барбер стрижет" 
                     width="370" 
                     height="346">
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>
+                    <h3 lang="en">Alan Black</h3>
+                    <p lang="en">Extreme Barber</p>
                     <ul>
                         <li>
                             <a href="">
@@ -216,8 +246,8 @@
         </section>
         <!-- section what is barber -->
         <section>
-            <h2>Процес стрижки барбера</h2>
             <p>На латинском языке “барба” означает “борода”</p>
+            <h2>Процес стрижки барбера</h2>
             <ul>
                 <li>
                     <img src="./images/process1.jpg" alt="Стрижка" width="270" height="360">
@@ -233,7 +263,38 @@
                 </li>
             </ul>
         </section>
+        <!-- section online registration -->
+        <section>
+            <h2>Онлайн-запись</h2>
+        </section>
+        <!-- section contacts -->
+        <section id="contacts">
+            <h2>Контакты</h2>
+            <address>
+                <ul>
+                    <li>
+                        <a href="https://goo.gl/maps/KJwLbrDiFiPLTejZ9" target="_blank" rel="noopener norefferer">ул. Васильковская,
+                            7А<br>
+                            Киев, 08132</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380441111111">+38 044 111 11 11</a>
+                    </li>
+                    <li>
+                        <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+                    </li>
+                </ul>
+            </address>
+            <b>время работы</b>
+            <p>Ежедневно с 9:00 до 22:00</p>
+        </section>
     </main>                                                               
-    <footer></footer>
+    <footer>
+        <p>&#169; Copyright 2020</p>
+        <ul>
+            <li><a href="" target="_blank" rel="noopener norefferer">Instagram</a></li>
+            <li><a href="" target="_blank" rel="noopener norefferer">YouTube</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
