--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#prices">Услуги и цены</a>
                 </li>
                 <li>
-                    <a href=#masters">Мастера</a>
+                    <a href="#masters">Мастера</a>
                 </li>
                 <li>
                     <a href="#contacts">Контакты</a>
@@ -50,14 +50,14 @@
             <ul>
                 <li>
                     <img 
-                    src="./images/img 1.jpg" 
+                    src="./images/img1.jpg" 
                     alt="Бреет шею" 
                     width="270" 
                     height="445">
                 </li>
                 <li>
                     <img 
-                    src="./images/img 2.jpg" 
+                    src="./images/img2.jpg" 
                     alt="Делает кантик" 
                     width="270" 
                     height="445">
