--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#prices">Услуги и цены</a>
                 </li>
                 <li>
-                    <a href="#masters">Мастера</a>
+                    <a href="#master">Мастера</a>
                 </li>
                 <li>
                     <a href="#contacts">Контакты</a>
@@ -145,7 +145,7 @@
             </p>
         </section>
         <!-- section our masters -->
-        <section id="masters">
+        <section id="master">
             <p>для настоящих ценителей атмосферы</p>
             <h2>Наши мастера</h2>
             <ul>
