--- a/index.html
+++ b/index.html
@@ -130,30 +130,36 @@
         </section>
         <!-- ==================section why come to us =================-->
         <section class="section">
-            <div class="container">
-                <ul>
-                    <li class="item-why">
-                        <span class="text-why-number">600</span>
-                        <p class="text-why-one">Довольных клиентов в день</p>
-                    </li>
-                    <li class="item-why">
-                        <span class="text-why-number">50</span>
-                        <p class="text-why-one">Наград за отличный сервис</p>
-                    </li>
-                    <li class="item-why">
-                        <span class="text-why-number">20</span>
-                        <p class="text-why-one">Лучших мастеров Киева</p>
-                    </li>
-                    <li class="item-why">
-                        <span class="text-why-number">100</span>
-                        <p class="text-why-one">Подарков постоянным клиентам</p>
-                    </li>
+            <div class="container container-why">
+                <ul class="menu-why">
+                    <div class="column-why-first">
+                        <li class="item-why">
+                            <span class="text-why-number">600</span>
+                            <p class="text-why-one">Довольных клиентов в день</p>
+                        </li>
+                        <li class="item-why">
+                            <span class="text-why-number">20</span>
+                            <p class="text-why-one">Лучших мастеров Киева</p>
+                        </li>
+                    </div>
+                    <div class="column-why-second">
+                        <li class="item-why">
+                            <span class="text-why-number">50</span>
+                            <p class="text-why-one">Наград за отличный сервис</p>
+                        </li>                       
+                        <li class="item-why">
+                            <span class="text-why-number">100</span>
+                            <p class="text-why-one">Подарков постоянным клиентам</p>
+                        </li>
+                    </div>
                 </ul>
-                <p class="text-why-two">Старая традиционная школа</p>
-                <h2 class="title-why">Почему приходят именно к нам?</h2>
-                <p class="text-why-three">
-                    О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.
-                </p>
+                <div class="column-why-text">
+                    <p class="over-title-why">Старая традиционная школа</p>
+                    <h2 class="title-why">Почему приходят именно к нам?</h2>
+                    <p class="description-why">
+                        О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.
+                    </p>
+                </div>
             </div>
         </section>
         <!--================= section our masters ====================-->
@@ -161,82 +167,82 @@
             <div class="container">
                 <p class="text-masters">для настоящих ценителей атмосферы</p>
                 <h2 class="title-masters">Наши мастера</h2>
-                <ul>
-                    <li>
+                <ul class="menu-masters">
+                    <li class="item-masters">
                         <img src="./images/master1.jpg" alt="Барбер стрижет" width="370" height="346">
                         <h3 class="subtitle-masters" lang="en">John Smith</h3>
                         <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul>
-                            <li>
+                        <ul class="list-socialnet">
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/instagram-icon.svg" alt="Instagram">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/twitter-icon.svg" alt="Twitter">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/facebook-icon.svg" alt="Facebook">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/linkedin-icon.svg" alt="LinkedIn">
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="item-masters">
                         <img src="./images/master2.jpg" alt="Барбер стрижет" width="370" height="346">
                         <h3 class="subtitle-masters" lang="en">Michele Doe</h3>
                         <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul>
-                            <li>
+                        <ul class="list-socialnet">
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/instagram-icon.svg" alt="Instagram">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/twitter-icon.svg" alt="Twitter">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/facebook-icon.svg" alt="Facebook">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/linkedin-icon.svg" alt="LinkedIn">
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="item-masters">
                         <img src="./images/master3.jpg" alt="Барбер стрижет" width="370" height="346">
                         <h3 class="subtitle-masters" lang="en">Alan Black</h3>
                         <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul>
-                            <li>
+                        <ul class="list-socialnet">
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/instagram-icon.svg" alt="Instagram">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/twitter-icon.svg" alt="Twitter">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/facebook-icon.svg" alt="Facebook">
                                 </a>
                             </li>
-                            <li>
+                            <li class="item-socialnet">
                                 <a href="">
                                     <img src="./images/linkedin-icon.svg" alt="LinkedIn">
                                 </a>
@@ -250,18 +256,18 @@
         <section class="section">
             <div class="container">
                 <p class="text-what">На латинском языке “барба” означает “борода”</p>
-                <h2>Процес стрижки барбера</h2>
-                <ul>
-                    <li>
+                <h2 class="visually-hidden">Процес стрижки барбера</h2>
+                <ul class="menu-what">
+                    <li class="item-what">
                         <img src="./images/process1.jpg" alt="Стрижка" width="270" height="360">
                     </li>
-                    <li>
+                    <li class="item-what">
                         <img src="./images/process2.jpg" alt="Бритье" width="270" height="360">
                     </li>
-                    <li>
+                    <li class="item-what">
                         <img src="./images/process3.jpg" alt="Компрес" width="270" height="360">
                     </li>
-                    <li>
+                    <li class="item-what">
                         <img src="./images/process4.jpg" alt="Бритье шеи" width="270" height="360">
                     </li>
                 </ul>
